# SBM_package

./: .gitignore  LICENSE  Readme.md  SBM.py  main.py  pyproject.toml  setup.cfg  utils.py
data/: Adj.npy  True_clusters.npy  tau_init.npy
sbm/: Model_functions_vem.py  SBM.py  utils.py
sbm_vbem/: Model_functions.py  SBM.py
src/: SBM.py
